# carla-autoware-extension

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md
.github/workflows/: build-toolchain-image.yml  ci.yaml
docker/: compose.yaml  cyclonedds.xml  env.sh
docker/overlay/awsim_labs_sensor_kit_launch/config/: concatenate_and_time_sync_node.param.yaml
docker/toolchain/: LICENSES.md  Toolchain.Dockerfile
docs/: architecture.md  e2e-report.md  environment.md  g0-report.md  mgrs-handedness.md  nishishinjuku-map.md  phase-b-report.md  prerequisites.md  running-e2e.md  running-phase-b.md  toolchain-image.md
extension/: CMakeLists.txt  version.map
extension/include/carla/autoware/control/: AutowareSteeringCompensation.h
extension/include/carla/autoware/geo/: MgrsOffset.h
extension/include/carla/autoware/messages/: AutowareMessages.h  Cdr.h  RosIdl.h
extension/include/carla/ros2/extension/: CarlaRos2Extension.h
extension/scripts/: compute_type_hash.sh
extension/src/: ExtensionInit.cpp  version.cpp
extension/src/engage/: EngageStateMachine.cpp  EngageStateMachine.h
extension/src/messages/: AutowareMessages.cpp  AwGoldens.inc  RosIdl.cpp
extension/src/publishers/: GeoGoldens.inc  GnssPosePublisher.cpp  GnssPosePublisher.h  StatusPublishers.cpp  StatusPublishers.h
extension/src/subscribers/: ControlSubscribers.cpp  ControlSubscribers.h
extension/test/: CMakeLists.txt  test_control_conversion.cpp  test_engage.cpp  test_gnss_pose.cpp  test_init.cpp  test_messages.cpp  test_rosidl.cpp  test_smoke.cpp  test_status_publishers.cpp
extension/toolchain/: CarlaExtension.cmake
runner/: __init__.py  __main__.py  kit.py  loop.py  pyproject.toml  spawn.py
runner/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
scripts/: bootstrap_carla_msgs.sh  expected_topics.yaml  interop_check.py  interop_lib.py  run_g0.sh  spike_stack.json
scripts/e2e/: arm_closed_loop.sh  collect_gt.py  dummy_perception.py  gate_g1_localization.sh  gate_g2_closed_loop.sh  gate_g3_performance.sh  launch_autoware.sh  launch_rviz.sh  measure_ndt.py  probe_carla_mgrs.py  reseed_localization.py  run_e2e.sh  verify_editor_artifact.sh  verify_mgrs_handedness.py
scripts/phase_b/: gate_g1_localization.sh  gate_g2_closed_loop.sh  gate_g3_performance.sh  launch_autoware.sh  measure_ndt.py  measure_rates.py  measure_route.py  probe_carla_mgrs.py  run_phase_b.sh  verify_editor_artifact.sh  verify_mgrs_handedness.py
scripts/toolchain/: make_libcxx_tarball.sh
tests/: test_interop_lib.py
tests/e2e/: test_collect_gt.py  test_measure_ndt.py  test_measure_rates.py  test_measure_route.py  test_mgrs_offset.py  test_runner_cli.py  test_runner_kit.py
tests/phase_b/: test_concat_overlay.py  test_measure_ndt.py  test_measure_rates.py  test_measure_route.py  test_mgrs_offset.py  test_runner_cli.py  test_runner_kit.py
