[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carla-autoware-runner"
version = "0.0.0"
description = "Declarative CARLA spawn runner for the Autoware native ROS 2 interop demo."
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools]
packages = ["runner"]

[tool.setuptools.package-dir]
runner = "."
